# example-stop-rent-bot

./: README.md
polygon-claim-rent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
polygon-claim-rent/bot/: abi.py  consts.py  diskord.py  logs.py  main.py  renting.py  secrets.py
polygon-claim-rent/scripts/: build_image_and_push_to_ecr.sh  setup.sh
